# xylo-pulse-counter

./: .gitignore  CMakeLists.txt  Makefile  README.md  cycfx2prog.cc  test_pulsecounter.py
Firmware/CountExtClk/: FX2_sequential.v  TTLOutputs.bsf  altpll0.bsf  altpll0.v  altpll0_bb.v  altpll1.bsf  altpll1.cmp  altpll1.ppf  altpll1.vhd  apdtimer_all.bsf  clicklatch.bsf  coiencedence.bsf  coiencedence.v  coincidence.bsf  dcfifo0.bsf  dcfifo2.bsf  dcfifo2_bb.v  my_lpm_mux.bsf  my_lpm_mux.v  my_wide_fifo.v  mycounter.bsf  mycounter.v  summator.v  syncdelay.bsf  syncdelay.v  testingigo_all.bdf  testingigo_all.jdi  testingigo_all.pin  testingigo_all.pof  testingigo_all.qsf  testingigo_all.rbf  testingigo_all.sof
Firmware/CountExtClk/db/: testingigo_all.db_info
Firmware/CountIntClk/: FX2_sequential.bsf  FX2_sequential.inc  TTLOutputs.v  altpll0.bsf  altpll0.ppf  altpll0.v  altpll0_bb.v  apdtimer_all.bdf  apdtimer_all.bsf  clicklatch.v  clicklatch_crossdomain.bsf  clicklatch_crossdomain.v  clockConverter.bsf  clockConverter.cmp  clockConverter.qip  clockConverter.vhd  coincidence.v  dcfifo0.v  dcfifo0_bb.v  dcfifo2.v  dcfifo3.bsf  dcfifo3.v  dcfifo3_bb.v  my_wide_fifo.bsf  summator.bsf  testingigo_all.bdf  testingigo_all.bsf  testingigo_all.jdi  testingigo_all.pin  testingigo_all.pof  testingigo_all.qpf  testingigo_all.qsf  testingigo_all.rbf  testingigo_all.sof  testingigo_all_assignment_defaults.qdf
Stats/: CMakeLists.txt  StatsDLL.cpp  StatsDLL.h  pulse_counter.cpp  stdafx.cpp  stdafx.h
convert_string/: Makefile
cycfx2/convert_string/: convert.c
cycfx2/cycfx2prog/: cycfx2dev.cc  cycfx2dev.h  pulse_counter.cpp  pypulse_counter.cpp
cycfx2/hello_world_ram/: Makefile
cycfx2/hello_world_usb/: Makefile  hello.c
cycfx2/saxo_loader/: Makefile  index.html  saxo_loader.c  xylo_setup.c
cycfx2prog/: Makefile
hello_world_ram/: hello.c
hello_world_usb/: hello.c
saxo_loader/: saxo_loader.c
